--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -5,7 +5,14 @@
 
 body
 	font-family: $font-primary
+	font-weight: normal
+	font-style: normal
 	color: $color-grafite
+
+.container
+	width: $content-max-width
+	margin: 0 auto
+	padding: $content-padding	
 
 @import "./common/header.sass"
 @import "./pages/index.sass"
