--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -1,7 +1,9 @@
 // Размеры
-$content-max-weight: 1400px
+$content-max-width: 1440px
 $content-padding: 0 20px
+$content-max-width-tab: 1024px
 $content-padding-tab: 0 15px
+$content-max-width-mob: 768px
 $content-padding-mob: 0 10px
 
 // Шрифт
