--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -5,4 +5,7 @@ block variables
     - var contactForm = false
 
 block content
+    section.main-banner 
+        .main-banner__content
+            img.main-banner__img(src="./assets/images/main-banner-bg.jpg", alt="Кроссовок Nike")
     main.main
