--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -1,1 +1,10 @@
-
+.main-banner
+    position: absolute
+    top: 0
+    width: 100%
+    z-index: 0
+    &__content
+        width: 100%
+        margin: 0 auto
+    &__img
+        width: 100%
