--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -5,7 +5,8 @@ block variables
     - var contactForm = false
 
 block content
-    section.main-banner 
-        .main-banner__content
-            img.main-banner__img(src="./assets/images/main-banner-bg.jpg", alt="Кроссовок Nike")
     main.main
+        .wrapper
+        section.main-banner 
+            .main-banner__content
+                img.main-banner__img(src="./assets/images/main-banner-bg.jpg", alt="Кроссовок Nike")
