--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -5,24 +5,24 @@ header.header
 				span  
 			nav.header__menu-body.menu__body
 				ul.header__list.menu__list
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="concept.html").header__menu-link.menu__link Мужчинам
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="catalog.html").header__menu-link.menu__link Женщинам
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="projects.html").header__menu-link.menu__link Коллекции
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="blog.html").header__menu-link.menu__link Виды спорта
 				ul.header__list.menu__list
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="concept.html").header__menu-link.menu__link Контакты
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="catalog.html").header__menu-link.menu__link Помощь
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="projects.html").header__menu-link.menu__link Аккаунт
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="blog.html").header__menu-link.menu__link Корзина
-					li.header__list-item
+					li.header__list-item.menu__item
 						a(href="blog.html").header__menu-link.menu__link Поиск
 		.header__logo-box 
 			a.header__logo-link(href="#")
