started layout of footer

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -7,8 +7,10 @@ body
 	font-family: $font-primary
 	font-weight: normal
 	font-style: normal
-	color: $color-grafite
+	color: $color-graphite
 	position: relative
+	display: flex
+	flex-direction: column
 
 body._lock
 	overflow: 
@@ -17,6 +19,7 @@ body._lock
 	max-width: $siteWidth
 	width: 100%
 	margin: 0 auto
+	flex: 1 1 auto
 
 .container
 	max-width: $content-max-width
