--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -11,7 +11,9 @@ $content-padding-mob: 0 10px
 $font-primary: "Helvetica", sans-serif
 
 // Цвета
-$color-grafite: #3D3D3D
+$color-graphite: #3D3D3D
 $color-Black: #000000
+$color-black_2: #292929
 $color-White: #ffffff
+$color-placeholder: #DDDDDD
 
