--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -1,6 +1,11 @@
+.main
+    width: 100%
+    height: 100%
+
 .main-banner
     position: absolute
     top: 0
+    left: 0
     width: 100%
     z-index: 0
     &__content
