continued layout of footer

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -7,18 +7,23 @@ body
 	font-family: $font-primary
 	font-weight: normal
 	font-style: normal
-	color: $color-graphite
-	position: relative
+	font-size: $text-font-size-desktop
+	color: $color-Black
 	display: flex
 	flex-direction: column
 
 body._lock
-	overflow: 
+	overflow: hidden
+
+button
+	display: flex
+	justify-content: center
+	align-items: center
 	
 .wrapper
 	max-width: $siteWidth
 	width: 100%
-	margin: 0 auto
+	margin: -86px auto 0 auto
 	flex: 1 1 auto
 
 .container
