--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -2,13 +2,19 @@
 $siteWidth: 1920px
 $content-max-width: 1440px
 $content-padding: 0 20px
-$content-max-width-tab: 1024px
-$content-padding-tab: 0 15px
+$content-max-width-tablet: 1024px
+$content-padding-tablet: 0 15px
 $content-max-width-mob: 768px
 $content-padding-mob: 0 10px
 
 // Шрифт
 $font-primary: "Helvetica", sans-serif
+$text-font-size-desktop: 16px
+$big-title-size: 144px
+$middle-title-size: 64px
+$section-title-desktop: 24px
+$section-title-tablet: 20px
+$section-title-mobile: 18px
 
 // Цвета
 $color-graphite: #3D3D3D
