--- a/src/styles/common/_nullstyle.scss
+++ b/src/styles/common/_nullstyle.scss
@@ -41,7 +41,6 @@ body {
 	width: 100%;
 	min-height: 100vh;
 	height: 100%;
-	font-size: 16px;
 	line-height: 1;
 	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
@@ -99,6 +98,7 @@ a:not([class]) {
 /* Упрощаем работу с изображениями */
 img {
 	max-width: 100%;
+	width: 100%;
 	object-fit: cover;
 	display: block;
 	vertical-align: top;
