--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -1,13 +1,65 @@
+@import ../common/_vars
+
+.swiper-container-horizontal>.swiper-pagination-fraction
+    max-width: 87%
+    text-align: right
+    top: 22px
+    bottom: auto
+    pointer-events: none
+    z-index: 0
+
+.swiper-container-horizontal>.swiper-pagination
+    & span
+        font-size: 16px
+        line-height: 140%
+
+.swiper-button-prev,
+.swiper-button-next
+    width: 50px
+    height: 50px
+    top: 28px
+    left: auto
+.swiper-button-prev
+    right: 70px
+
+.swiper-button-next
+    right: 0
+svg>circle
+    stroke: inherit
+    fill: inherit
+
+svg>path
+    stroke: inherit
+    fill: inherit
+
+#swiper-arrow-next
+    stroke: orange
+    fill: orange
+.section
+    width: 100%
+    position: relative
+    &__heading
+        margin-bottom: -45px
+    &__title
+        font-weight: bold
+        font-size: $section-title-desktop
+        line-height: 28px
+        color: $color-Black
+    &__link
+        color: $color-Black
+        text-decoration: underline
+        font-size: 12px
+        line-height: 14px
+        padding: 5px
+        margin: 0 0 0 -5px
+
 .main
     width: 100%
     height: 100%
 
 .main-banner
-    position: absolute
-    top: 0
-    left: 0
     width: 100%
-    z-index: 0
+    height: 100%
     &__content
         width: 100%
         margin: 0 auto
